fixed resource menu and changed spacing

--- a/_navigation.scss
+++ b/_navigation.scss
@@ -70,7 +70,7 @@ nav {
 
     :nth-child(9) {
         position: absolute;
-        top: 810px;
+        top: 785px;
         display: flex;
         align-items: center;
         i {
