--- a/_spacing.scss
+++ b/_spacing.scss
@@ -1,14 +1,15 @@
 .mainContainer {
     width: 90%;
-    height: 85%;
+    height: 804px;
     min-height: 800px;
-    margin: 0 auto;
+
+    margin: 80px auto;
     display: flex;
     align-items: center;
 }
 
 body {
-    height: 100vh;
+    // height: 100vh;
     display: flex;
-    align-items: center;
+    // align-items: center;
 }
