--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ nav {
 }
 .navList :nth-child(9) {
   position: absolute;
-  top: 810px;
+  top: 785px;
   display: flex;
   align-items: center;
 }
@@ -116,17 +116,15 @@ nav {
 
 .mainContainer {
   width: 90%;
-  height: 85%;
+  height: 804px;
   min-height: 800px;
-  margin: 0 auto;
+  margin: 80px auto;
   display: flex;
   align-items: center;
 }
 
 body {
-  height: 100vh;
   display: flex;
-  align-items: center;
 }
 
 body {
